jwt-test.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: jwt-test
  labels:
    app: jwt-test
spec:
  replicas: 1
  selector:
    matchLabels:
      app: jwt-test
  template:
    metadata:
      labels:
        app: jwt-test
    spec:
      containers:
      - name: jwt-test
        image: jlxw48/jwt-test
        imagePullPolicy: Never # setting local image
        resources:
          limits:
            memory: "128Mi"
            cpu: "500m"
        ports:
        - containerPort: 3000
---
apiVersion: v1
kind: Service
metadata:
  name: jwt-test
spec:
  selector:
    app: jwt-test
  ports:
    - protocol: TCP
      port: 3000
      targetPort: 3000
  sessionAffinity: ClientIP
