ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: system-manager
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/auth-url: https://jwt-test-cs3219.herokuapp.com/jwt/validate_token # need to set this to some external service
    # nginx.ingress.kubernetes.io/auth-signin: https://jwt-test-cs3219.herokuapp.com/jwt/login # route this to the login page
spec:
  rules:
  - host: kubernetes.docker.internal
    http:
      paths:
      - path: /api/questions
        pathType: Prefix
        backend:
          service:
            name: questions
            port: 
              number: 3000
